<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:background="@android:color/transparent"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        android:paddingStart="@dimen/_14sdp"
        android:paddingEnd="@dimen/_14sdp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/english_to_french"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/letsStartButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginBottom="@dimen/_98sdp"
        app:cornerRadius="@dimen/_12sdp"
        android:text="@string/let_s_start"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />
    
</androidx.constraintlayout.widget.ConstraintLayout>